entity_parser/AntlrEntityParser.py
# Generated from AntlrEntityParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AntlrEntityParser ( Parser ):

    grammarFileName = "AntlrEntityParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'integer'", "'boolean'", "'string'", 
                     "'entity'", "'module'", "':'", "';'", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "INTEGER", "BOOLEAN", "STRING", "ENTITY", 
                      "MODULE", "COLON", "SEMI", "LSQRD", "RSQRD", "LCRLY", 
                      "RCRLY", "ID", "WS" ]

    RULE_module = 0
    RULE_entity = 1
    RULE_feature = 2
    RULE_type_spec = 3

    ruleNames =  [ "module", "entity", "feature", "type_spec" ]

    EOF = Token.EOF
    INTEGER=1
    BOOLEAN=2
    STRING=3
    ENTITY=4
    MODULE=5
    COLON=6
    SEMI=7
    LSQRD=8
    RSQRD=9
    LCRLY=10
    RCRLY=11
    ID=12
    WS=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._entity = None # EntityContext
            self.entities = list() # of EntityContexts

        def MODULE(self):
            return self.getToken(AntlrEntityParser.MODULE, 0)

        def LCRLY(self):
            return self.getToken(AntlrEntityParser.LCRLY, 0)

        def RCRLY(self):
            return self.getToken(AntlrEntityParser.RCRLY, 0)

        def EOF(self):
            return self.getToken(AntlrEntityParser.EOF, 0)

        def ID(self):
            return self.getToken(AntlrEntityParser.ID, 0)

        def entity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrEntityParser.EntityContext)
            else:
                return self.getTypedRuleContext(AntlrEntityParser.EntityContext,i)


        def getRuleIndex(self):
            return AntlrEntityParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = AntlrEntityParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.match(AntlrEntityParser.MODULE)
            self.state = 9
            localctx.name = self.match(AntlrEntityParser.ID)
            self.state = 10
            self.match(AntlrEntityParser.LCRLY)
            self.state = 14
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 11
                localctx._entity = self.entity()
                localctx.entities.append(localctx._entity)
                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 17
            self.match(AntlrEntityParser.RCRLY)
            self.state = 18
            self.match(AntlrEntityParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self._feature = None # FeatureContext
            self.features = list() # of FeatureContexts

        def ENTITY(self):
            return self.getToken(AntlrEntityParser.ENTITY, 0)

        def LCRLY(self):
            return self.getToken(AntlrEntityParser.LCRLY, 0)

        def RCRLY(self):
            return self.getToken(AntlrEntityParser.RCRLY, 0)

        def ID(self):
            return self.getToken(AntlrEntityParser.ID, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrEntityParser.FeatureContext)
            else:
                return self.getTypedRuleContext(AntlrEntityParser.FeatureContext,i)


        def getRuleIndex(self):
            return AntlrEntityParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = AntlrEntityParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(AntlrEntityParser.ENTITY)
            self.state = 21
            localctx.name = self.match(AntlrEntityParser.ID)
            self.state = 22
            self.match(AntlrEntityParser.LCRLY)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 23
                localctx._feature = self.feature()
                localctx.features.append(localctx._feature)
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self.match(AntlrEntityParser.RCRLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.type_ = None # Type_specContext

        def COLON(self):
            return self.getToken(AntlrEntityParser.COLON, 0)

        def SEMI(self):
            return self.getToken(AntlrEntityParser.SEMI, 0)

        def ID(self):
            return self.getToken(AntlrEntityParser.ID, 0)

        def type_spec(self):
            return self.getTypedRuleContext(AntlrEntityParser.Type_specContext,0)


        def getRuleIndex(self):
            return AntlrEntityParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = AntlrEntityParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            localctx.name = self.match(AntlrEntityParser.ID)
            self.state = 32
            self.match(AntlrEntityParser.COLON)
            self.state = 33
            localctx.type_ = self.type_spec()
            self.state = 34
            self.match(AntlrEntityParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AntlrEntityParser.RULE_type_spec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class String_typeContext(Type_specContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AntlrEntityParser.Type_specContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(AntlrEntityParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_type" ):
                listener.enterString_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_type" ):
                listener.exitString_type(self)


    class Entity_typeContext(Type_specContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AntlrEntityParser.Type_specContext
            super().__init__(parser)
            self.target = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(AntlrEntityParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_type" ):
                listener.enterEntity_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_type" ):
                listener.exitEntity_type(self)


    class Boolean_typeContext(Type_specContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AntlrEntityParser.Type_specContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(AntlrEntityParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolean_type" ):
                listener.enterBoolean_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolean_type" ):
                listener.exitBoolean_type(self)


    class Integer_typeContext(Type_specContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AntlrEntityParser.Type_specContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(AntlrEntityParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_type" ):
                listener.enterInteger_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_type" ):
                listener.exitInteger_type(self)



    def type_spec(self):

        localctx = AntlrEntityParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_spec)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = AntlrEntityParser.Integer_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(AntlrEntityParser.INTEGER)
                pass
            elif token in [2]:
                localctx = AntlrEntityParser.Boolean_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.match(AntlrEntityParser.BOOLEAN)
                pass
            elif token in [3]:
                localctx = AntlrEntityParser.String_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(AntlrEntityParser.STRING)
                pass
            elif token in [12]:
                localctx = AntlrEntityParser.Entity_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                localctx.target = self.match(AntlrEntityParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





